--- a/config/locales/devise.views.ja.yml
+++ b/config/locales/devise.views.ja.yml
@@ -67,6 +67,12 @@ ja:
     unlocks:
       new:
         resend_unlock_instructions: "アカウントの凍結解除方法を再送する"
+    errors:
+      # models:
+      #   user:
+      #     attributes:
+            username:
+              blank: を入力してください
    
    
 
